workspace/checkpoint/different_knobs_subset_10/lr_0.2/lr_decay/JT_11b/err_2.txt
  File "code/train.py", line 108
    from models.jt_q_three_layer as jt_quant 
                                 ^
SyntaxError: invalid syntax
  File "code/train.py", line 108
    from models.jt_q_three_layer import as jt_quant 
                                        ^
SyntaxError: invalid syntax
